Beautified html code for 204S19.HTM

--- a/F19/204F19.HTM
+++ b/F19/204F19.HTM
@@ -1,118 +1,108 @@
 <HTML>
 <HEAD>
-<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-<TITLE>EGR 204 Public Portal</TITLE>
-<style type="text/css">
-A:link {color:#CC9900; font-weight:bold; text-decoration: none;}
-A:visited {color: #CC9900; font-weight:bold; 
-          text-decoration: none;}
-TABLE {font-family:"verdana"; font-size:10pt;}
-</style>
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+	<TITLE>EGR 204 Public Portal</TITLE>
+	<style type="text/css">
+		A:link {color:#CC9900; font-weight:bold; text-decoration: none;}
+		A:visited {color: #CC9900; font-weight:bold; text-decoration: none;}
+		TABLE {font-family:"verdana"; font-size:10pt;}
+	</style>
 </HEAD>
 <BODY>
-<table align="center" width="420"><tr><td>
-<P Align="Center"><B><A 
-HREF="../redirect/Dordt_Engineering.htm"
-target="_top">
-
+<!--  INSTRUCTURE START COPY HERE (CUT ALL ABOVE) -->
+<table align="center" width="480"><tr><td style="text-align: center;">
+	<B><A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+		"../redirect/Dordt_Engineering.htm">
            Dordt University Engineering Department</A><BR><BR>
              INTRODUCTION TO MICROPROCESSORS AND <br>
                   DIGITAL CIRCUITS, EGR 204<BR> 
-                          (Fall 2019)</B></P>
+                          (Fall 2019)</B>
 </td></tr></table>
 <table align="center" style="width:480px" border="0"><tr>
-<!--<td width="42">&nbsp;</td>-->
+	<!-- TEXTBOOK -->
+	<td align="center" valign="bottom" style="width:120px">
+	<A target="_top" style="color: #CC9900; text-decoration: none;"HREF=
+		"http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308896.cw/index.html">
+		<img width="100" height="132" alt="'click'--> to publisher's page" hspace="0" border="0"
+			src="204/ManoKimeMartin5Cover100x132_0133760634.png"></A><br>
+	<A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+		"http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308896.cw/index.html">
+		<b>Our Textbook</b></a></td>
 
-<!-- TEXTBOOK -->
-<td align="center" valign="bottom" style="width:120px">
-<!--<td style="width:120px">-->
-<A HREF="http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308896.cw/index.html"
-target="_top">
-<img width="100" height="132"
-alt="'click'--> to publisher's page" hspace="0" 
-src="204/ManoKimeMartin5Cover100x132_0133760634.png"
-border="0"></A><br>
-<A HREF=
-"http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308896.cw/index.html" target="_top">
-<b>Our Textbook</b></a></td>
+	<!-- DE BOER -->
+	<td align="center" valign="bottom" style="width:240px"><br>
+	<A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+		"../index.html">
+		<img width="135" height="165" alt="'click'-->to De Boer's homepage" hspace="0" border="0"
+			src="204/DeBoer_2016_135x165.jpg"></A><br>
+	<A target="_top" style="color: #CC9900; text-decoration: none;" 
+		HREF="../index.html">
+		<b>Prof. De Boer</b></a><br>
+	Office Phone: 712-722-6245<br>
+	<a style="color: #CC9900; text-decoration: none;" href="mailto:Douglas.DeBoer@Dordt.edu">
+		Douglas.DeBoer@Dordt.edu</a></td>
 
-<!-- DE BOER -->
-<td align="center" valign="bottom" style="width:240px"><br>
-<!--<td style="width:120px">-->
-<A HREF="../index.html"
-target="_top">
-<img width="135" height="165" 
-alt="'click'-->to De Boer's homepage" hspace="0" 
-src="204/DeBoer_2016_135x165.jpg" 
-border="0"></A><br>
-<A HREF="../index.html"
-target="_top">
-<b>Prof. De Boer</b></a><br>
-Office Phone: 712-722-6245<br>
-<a href="mailto:Douglas.DeBoer@Dordt.edu">Douglas.DeBoer@Dordt.edu</a></td>
-
-<!-- LAB SOFTWARE --> 
-<td align="center" valign="bottom" style="width:120px"><br>
-<!--<td style="width:120px">-->
-<A HREF=
-"204/Quartus.htm"
-target="_top">
-<img width="110" height="138" 
-alt="'click'-->to Quartus II download page" hspace="0" 
-src="204/Quartus_logo_110x138.png" 
-border="0"></A><br>
-<A HREF=
-"204/Quartus.htm"
-target="_top">
-<b>Lab Software</b></a></td>
+	<!-- LAB SOFTWARE --> 
+	<td align="center" valign="bottom" style="width:120px"><br>
+	<A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+		"204/Quartus.htm">
+		<img width="110" height="138" alt="'click'-->to Quartus II download page" hspace="0" border="0"
+			src="204/Quartus_logo_110x138.png"></A><br>
+	<A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+		"204/Quartus.htm">
+		<b>Lab Software</b></a></td>
 </tr></table>
 
+<table align="center" style="width:480px" border="0"><tr><td style="text-align: center;"><br>
 <!-- HOMEWORK --> 
-<!--<td width="42">&nbsp;</td>-->
-<table align="center" width="420"><tr><td><br>
-<P align="center"><A HREF="204/204F19PS.HTM" target="_top"
->Homework Assignments</A><BR>
-Homework must conform to these <A 
-HREF="../integrity.htm" target="_top">standards</A>.<BR>
-The publisher provides <A target="_top" HREF=
-"http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308899.cw/content/index.html"
->solutions to selected problems</A>.<BR>
-<!--(Homework assignments will be available <br> 
-starting Mon. January 15, 2007 at 5 PM.)-->
-</P> 
+<A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+	"204/204F19PS.HTM" 
+	><b>Homework Assignments</b></A><BR>
+Homework must conform to these <A target="_top" style="color: #CC9900; text-decoration: none;" 
+HREF="../integrity.htm"
+	><b>standards</b></A>.<BR>
+The publisher provides <A target="_top" style="color: #CC9900; text-decoration: none;"  HREF=
+	"http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308899.cw/content/index.html"
+	><b>solutions to selected problems</b></A>.<br><br>
 
-<P align="center"><A HREF= "204/EGR204_Syllabus2019F_De_Boer_204F19SY_Intro_Micro_and_Digital.pdf" target="_top"
->Course Syllabus</A><BR>
-Includes course description, textbook, grade weights, etc.<br>
-<!--(Course Syllabus will be available starting <br>
-Mon. January 15, 2007)--></P> 
+<A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+	"204/EGR204_Syllabus2019F_De_Boer_204F19SY_Intro_Micro_and_Digital.pdf"
+	><b>Course Syllabus</b></A><BR>
+Includes course description, textbook, grade weights, etc.<br><br>
 
-<P align="center"><A 
-HREF="../errata/Mano_Kime/5th/MKM_5_ERR.HTM"
-Target="_top">Textbook Errata</A></P> 
+<A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+	"../errata/Mano_Kime/5th/MKM_5_ERR.HTM"
+	><b>Textbook Errata</b></A><br><br>
 
-<P align="center"><A HREF = "../index.html" Target="_top"
->Professor De Boer's Homepage</A>.</P><BR><BR><br>
+<A target="_top" style="color: #CC9900; text-decoration: none;" HREF=
+	"../index.html"
+	><b>Professor De Boer's Homepage</b></A>.<br><br><br>
 
-<P align="center"><small>
-(The main portal to this course for students is via <A 
+<!-- UNCOMMENT FOR INSTRUCTURE ------------------------------ 
+<small>(The information in this frame is available outside of 
+Canvas@Dordt on the World Wide Web via the 
+<A target="_top" style="color: #CC9900; text-decoration: none;" 
+	href="https://dfdeboer.github.io/F19/204F19.HTM"  
+	><b>public web portal</b></a> to this course).</small>
+</td></tr></table>
+<!-- -----UNCOMMENT FOR INSTRUCTURE-------------------------- -->
+<!-- INSTRUCTURE STOP COPY HERE (CUT ALL BELOW) -->   
+
+<small>The main portal to this course for students is via <A 
 HREF="https://dordt.instructure.com/courses/2573771"
 Target="_top">Canvas@dordt</A> 
 <BR>The Canvas@dordt portal provides everything on this page and 
 more.<BR><BR>
 
 <a href="../S13/204S13.HTM">
-<img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
+<img src="../PREVIOUS.GIF" ALT="&lt;&mdash;PREVIOUS" border="0"></a>
 offering of this course by Professor De Boer
-<!-- <a href="../S14/204S14.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0"> -->
-<br><small>This course was offered in the Spring of 2014, 2015, 2016
-and in the fall of 2017 by other instructors.  It was not offered at 
-all in calendar year 2018 <br> 
-and it was not offered in the spring of 2019.</small>
-<BR> 
-</small></P> 
-
+<!-- <a href="../F21/204F21.HTM"> 
+<img src="../NEXT.GIF" ALT="NEXT&mdash;&gt;" border="0"></a> -->
+<br><small>This course was offered by other instructors in <br>
+the spring of 2014, 2015, 2016 and in the fall of 2017.<br> 
+It was not offered at all in calendar year 2018 and it 
+was not offered in the spring of 2019.</small>
 </td></tr></table>
 </BODY> </HTML>
 
