Added errata to the Mano, Kime & Martin 5th ed errata page.

--- a/integrity.htm
+++ b/integrity.htm
@@ -1,7 +1,6 @@
 <HTML>
 <HEAD>
-<link rel="shortcut icon" href=<link rel="shortcut icon" 
-href="http://homepages.dordt.edu/~ddeboer/favicon.ico">
+<link rel="shortcut icon" href="favicon.ico">
 <TITLE>Standards of Scholarship</TITLE>
 <style type="text/css"> 
 .inline-math{
