Fixed a broken link to errata list for Saadat's text

--- a/errata/ERR.HTM
+++ b/errata/ERR.HTM
@@ -173,7 +173,7 @@
    <A HREF="Saadat/2nd/S_2_ERR.HTM"><img src=
    "Saadat/2nd/Saadat_text_cover.jpg"
    width="120" height="158" border="0"></A></td><td><p>
-   <A HREF="saadat/2nd/S_2_ERR.HTM"
+   <A HREF="Saadat/2nd/S_2_ERR.HTM"
 >Saadat,<br><I>
    Power System Analysis</I>, 2nd edition, <br>
    McGraw-Hill, 2002.<br>
