setting up courses for the fall

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -38,7 +38,7 @@ A:hover {
                                                <p align="center">
    <A HREF="../../redirect/Dordt_Engineering.htm"
 
-         >DORDT COLLEGE ENGINEERING DEPARTMENT        </A><BR><B>
+         >DORDT UNIVERSITY ENGINEERING DEPARTMENT        </A><BR><B>
 INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                        (Fall 2019)                     </B></P>
 
