--- a/F19/204/Quartus.htm
+++ b/F19/204/Quartus.htm
@@ -30,7 +30,7 @@ TABLE {
                                                  <A target="_top"
      HREF="../../redirect/Dordt_Engineering.htm"">
 
-    Dordt College Engineering & Department</A>               <BR>
+    Dordt University Engineering Department</A>               <BR>
                                                              <BR>
          INTRODUCTION TO MICROPROCESSORS AND                 <BR>
              DIGITAL CIRCUITS, EGR 204                       <BR>
