Updated online CV, EGR 204 WWW pages, EGR 362 WWW pages, personal schedule on WWW

--- a/CV.HTM
+++ b/CV.HTM
@@ -367,12 +367,12 @@
         <p>Upon returning to the United States my family moved 
         to Grand Rapids Michigan and I attended Christian day 
         schools.  I found that I did not exactly blend in with 
-        the U.S. culture however.  My vocabulary and habits were 
+        the U.S. culture.  My vocabulary and habits were 
         no longer purely American.  I had a hard time being 
         "cool."  It was not fun, but it has also prepared me 
         somewhat to stand up for others when needed.    
         
-        <p>When I was a high-school, college, and univerisity student 
+        <p>When I was a high-school, college, and university student 
 		I thought my life-story was kind of short and 
 		simple&mdash;missionary kid returns to the States and tries 
 		to fit in to American culture.  But as the years went by, 
@@ -414,7 +414,7 @@
         Division."  In my first project there I designed the cell 
         array for a 640 kilo-bit read only memory (ROM).  Other 
         projects I worked on include redundancy programming 
-        circuits for a 128 kilo-bit random access memory (RAM).  
+        circuits for a 128 kilobit random access memory (RAM).  
         You can see a photo of that chip <A HREF="ddb/HP_RAM_sharp.JPG" 
         target="_blank">by clicking here.</A>   I also designed 
         some standard cells for a library of clock-driver 
@@ -458,7 +458,7 @@
         at Dordt University.  The decision to leave Hewlett Packard 
         Company was not black and white.  In favor of staying at 
         HP was the excitement of working with state-of-the-art 
-        technology in a well respected company.  In favor of 
+        technology in a well-respected company.  In favor of 
         Dordt was a sense that I had a special combination of 
         skills and a sympathy for what Dordt wanted to do.  After 
         arriving at Dordt, I participated in the initial 
@@ -531,7 +531,7 @@
              Q1: What is the chief end of man? <BR> 
 
              A1: Man's chief end is to glorify God, and to enjoy 
-             Him for ever. <BR></blockquote>
+             Him forever. <BR></blockquote>
 
         Susan glorified God in her earthly life as a wife, mother, 
 		artist, and friend of others.  I, along with all other 
@@ -575,8 +575,8 @@
         marriage.  Both of them are graduates of <A HREF=
         "http://www.unity.pvt.k12.ia.us/" target="_blank"
         >Unity Christian High School</A> in Orange City Iowa and 
-        of Dordt University and both are married.  Naomi also has 
-		a masters degree in fine arts from Iowa State University.  
+        of Dordt University.  Naomi also has 
+		a master's degree in fine arts from Iowa State University.  
 		She now does artwork on commission (see her <a href=
 		"http://www.naomifriend.com" target="_blank">website</a>), 
 		and with her husband <a href=
@@ -596,7 +596,7 @@
 		"Retirement Incentive" agreement I have made with Dordt 
 		University I am now reducing my time commitment to Dordt University
 		to half-time.  I have no plans to retire completely from 
-		engineering however.  I am now in a transition phase from 
+		engineering.  I am now in a transition phase from 
 		Dordt University to whatever new engineering opportunities I 
 		find to glorify God in the future.  I'm not only 
 		considering volunteer opportunities, but certainly I am 
@@ -616,8 +616,8 @@
         their engineering talent in their Christian faith.  
         Engineering is a delightfully multifaceted career field 
         in which there are many ways to help people solve technical 
-		problems.  Before the fall, there would have been engineering
-        work in order to <a href=
+		problems.  Before Adam and Eve sinned (the fall), there would 
+		have been engineering work in order to <a href=
 		"https://en.wikipedia.org/wiki/Cultural_mandate" target=
 		"_blank">develop the potential of the creation</a>.  
         For example, transportation technologies are possible because
@@ -651,6 +651,14 @@
     </TD>
 
     <TD WIDTH="520" COLSPAN="2"><DIV>
+        <P>D.F. De Boer, "God's Grace in Weights and Measures" 
+        <a href=
+        "http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Proceedings.pdf?attredirects=0&d=1"
+        ><I>Proceedings of the 2019 Christian Engineering Conference</I></a>, 
+        Sioux Center, Iowa, June 2019, pp 119 &ndash; 139.  (Slides to accompany this paper are <a href=
+		"http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Presentations.zip?attredirects=0&d=1"
+		>available</a>.  See "Session 5 - DeBoer")</P>
+
         <P>D.F. De Boer, "Using Design Hierarchy in Digital Logic 
         to Illustrate the Scientific Method as a Human Invention" 
         <a href=
@@ -772,7 +780,7 @@
         <HR>
         <A HREF = "INDEX.HTM">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 5/13/2019)</small></DIV>
+         <small>(This page last updated on 8/20/2019)</small></DIV>
     </TD>
 </TR>
 
