--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -42,25 +42,27 @@
         <P style="text-align: center;"><B><A target="_top"
         HREF="https://dfdeboer.github.io/redirect/Dordt_Engineering.htm">
         Dordt University Engineering Department</A><br>
-        Past courses instructed by Professor De Boer at Dordt University</b><br>
+        Past courses instructed by Professor De Boer</b><br>
 		Click a link to access information for a particular semester.<br><br><small>
 		
 		In the list below, "U" = "summer semester", "F" = "fall semester" 
 		and "S" = "spring semester."<br>
-        Example:  "F09" means the "fall semester of 2009."<br>
+        Example:  "F09" means the "fall semester of 2009."<br><br>
+		
 		Prior to May 13, 2019, "Dordt University" was known as, "Dordt College"<br>
-		Web pages for courses taught prior to U19 will show the name, "Dordt College"
-		on them in various places.<br>
-		The change from College to University was only symbolic.<br>
-		The ownership, administration, accreditation status and so forth was unchanged by the name change.<br>
+		Web pages for courses taught prior to U19 will show the institution's name as, "Dordt College"<br>
+		The change from College to University was a change in name only.<br>
+		The ownership, administration, accreditation status and so forth was unchanged.<br><br>
+		
 		Professor De Boer started using web pages for course management in S02.  
 		<br> If a date prior to S02 is shown but it is not a link it means the 
 		course was instructed by Professor De Boer during that semester but 
 		there is nothing related available online.
 		<br>If you cannot find what you are looking for here, you are encouraged 
         to e-mail professor De Boer to ask about it, but there is no assurance 
-		the information for older courses has been archived.  
-		<br>(To get back to this page from one of the links below, use your 
+		the information for older courses has been archived. <br><br>
+		
+		(To get back to this page from one of the links below, use your 
 		browser's back-arrow.)</small></p><p>
 		 
 		EGR 104, Introduction to Engineering Design<br>
@@ -77,13 +79,14 @@
 		<a href="S15/117S15.HTM">S15</a>, 
         <a href="S14/117S14.HTM">S14</a>,<br><br>
 		
-		EGR 170, Engineerig Programming For Instrumentation and Automation<br>
+		EGR 170, Engineering Programming For Instrumentation and Automation<br>
 		<a href="S19/170S19.HTM">S19</a><br><br>
 		
 		EGR 202, Materials Science<br>
 		S96<br><br>
 		 
 		EGR 204, Introduction to Microprocessors and Digital Circuits (with a lab)<br>
+		<a href="F19/204F19.HTM">F19</a>, 
 		<a href="S13/204S13.HTM">S13</a>, 
 		<a href="S12/204S12.HTM">S12</a>, 
 		<a href="S11/204S11.HTM">S11</a>, 
@@ -196,6 +199,7 @@
 		S01, F97, F95, F94, S91<br><br>
 		
 		EGR 363, Introduction to Communication Systems<br>
+		<a href="F19/363F19.HTM">F19</a>,
 		<a href="F17/363F17.HTM">F17</a>,
 		<a href="S16/363S16.HTM">S16</a>,
 		<a href="S14/363S14.HTM">S14</a>,
@@ -275,7 +279,7 @@
         <HR><p>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 5/1416/2019)</small></P>
+         <small>(This page last updated on 8/22/2019)</small></P>
     </TD>
 </TR>
 
