--- a/index_F19.html
+++ b/index_F19.html
@@ -61,7 +61,7 @@
   <img src="cd_common/transparent_pixel.gif" height="1" width="1">
   <H1>Dr. Douglas F. De Boer, P.E.</H1><P>
         Professor of Engineering<BR>
-        Dordt College<BR>
+        Dordt University<BR>
         498 Fourth Avenue NE<BR>
         Sioux Center IA 51250</P>
   </TD>
@@ -99,22 +99,26 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <HR>
 <br>
 <a name="Office_Hours"></a>
-<H1>Office Hours, Fall 2018</H1>
+<H1>Office Hours, Fall 2019</H1>
 <blockquote>
-     2:00 PM &ndash; 3:00 PM Wednesdays and Fridays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
+     9:25 AM &ndash; 10:40 PM Tuesdays and Thursdays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
 	 
      Meet me in person or via phone, chat, etc.  <br>
-     I "chat" via Microsoft Skype for Business.  <br>
-	 <small>&nbsp;&nbsp;&nbsp;(Skype for Business may already be 
-	 installed on your computer as part of MS Office.)</small><br>
-     I talk on the telephone too.  x6245 or 712-722-6245<br>
+     Call me!  x6245 or 712-722-6245  No appointment to call is needed.<br>
 	 <small>&nbsp;&nbsp;&nbsp;(I like the telephone. Call 
         all you want.  It is very convenient for both of us.)</small><br><br>
         
-     Before traveling (or walking) to visit me at my office, it is wise to call on the telephone and see if I'm in.  If I do not answer my office phone you may try my home phone or leave a message at my office phone.  If you are planning a few hours or more in advance, send e-mail to set up an appointment for a time that is mutually convenient.  I set up appointments outside of office hours frequently.<br><br>
+     Before traveling (or walking) to visit me at my office, it is wise to 
+	 call on the telephone and see if I'm in.  If I do not answer my office 
+	 phone you may try my home phone or leave a message at my office phone.  
+	 If you are planning a few hours or more in advance, send e-mail to set 
+	 up an appointment for a face-to-face meeting at a time that is mutually 
+	 convenient.  I set up appointments outside of office hours frequently.<br><br>
 	 
-     Students also have permission to telephone me at home or office any day except Sunday between 8 AM and 10 PM (Sunday is OK too if if the call is not about course work).  My office  phone number is 712-722-6245.  My home phone number is 
-     712-<IMG SRC=home_ph.gif ALIGN="ABSBOTTOM">.<br><br>
+     Students have permission to telephone me at home or office between <br>
+	 8 AM and 10 PM any day except Sunday. (Sunday is OK too if if the call is 
+	 not about course work.)  My office  phone number is 712-722-6245.  
+	 My home phone number is      712-<IMG SRC=home_ph.gif ALIGN="ABSBOTTOM">.<br><br>
        
      I have a "virtual open door" policy. Any time I am in my 
      office, I'd like to be available. Unless there is a "do not 
@@ -123,9 +127,9 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      or elsewhere and want to talk, just <i>pick up your phone and 
      call</i>. <BR><br> 
 
-     Here is Prof. De Boer's general <b><A HREF="F18/SCH_F18.pdf" 
+     Here is Prof. De Boer's general <b><A HREF="F19/SCH_F19.pdf" 
      >Weekly Schedule</A></b>.<br>
-	 Professor De Boer is now working for Dordt College on a half-time basis.
+	 Professor De Boer is now working for Dordt University on a half-time basis.
 	 </blockquote><br>
 	 
 
@@ -136,26 +140,26 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <a name="Courses"></a><br>
 <H1>Courses</H1>
 
-<p>In the Fall of 2018 I am teaching one course: </p>
+<p>In the Fall of 2019 I am teaching two courses: </p>
 
 <Blockquote><font face="verdana" size="2">
-<!--EGR 322-->
-     <A HREF="https://dordt.instructure.com/courses/2329138">
+<!--EGR 204-->
+     <A HREF="https://dordt.instructure.com/courses/2573771">
      <font color="#0099FF">C</font></A>
-     <a href="F18/322F18.HTM"
-     >EGR 322&nbsp; Electronics I (with a lab)</b></a><br>
+     <a href="F19/204F19.HTM"
+     >EGR 204&nbsp; Microprocessors and Digital Circuits (with a lab)</b></a><br>
 
-<!--CORE 399--> 
-     <!-- <A HREF="https://dordt.instructure.com/courses/2032745">
+<!--EGR 363-->
+     <A HREF="https://dordt.instructure.com/courses/2574845">
      <font color="#0099FF">C</font></A>
-     <A HREF="S17/304S17.HTM"
-     > &nbsp;&nbsp; CORE 399&nbsp; Calling, Task, and Culture (Mentor)</b></A><br> -->
+     <a href="F19/363F19.HTM"
+     >EGR 363&nbsp; Introduction to Communication Systems</b></a><br>
 
      <Blockquote><small>
      Note 1: Professor De Boer welcomes 
      qualified students to inquire about adding a <A 
      HREF="https://www.dordt.edu/academics/kuyper-scholars-program" 
-     >Kuyper Scholar's Project</A> to any of his courses.
+     >Kuyper Honors Project</A> to any of his courses.
      <BR><BR>
 
      Note 2:  Students may click on the blue "C" symbol for 
@@ -176,6 +180,10 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      <A HREF="F16/117F16.HTM" style="text-decoration: none"
      ><b><font color="#CC9900">*</font></b></A><br>
 
+     EGR 170&nbsp; Engineering Programming
+     <A HREF="S19/170S19.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>
+
      EGR 220&nbsp; Linear Circuits and Electronics (with a lab)
      <A HREF="S18/220S18.HTM" style="text-decoration: none"
      ><b><font color="#CC9900">*</font></b></A><br>
@@ -185,11 +193,11 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      ><b><font color="#CC9900">*</font></b></A><br>
 
      EGR 322&nbsp; Electronics I (with a lab)
-     <A HREF="F16/322F16.HTM" style="text-decoration: none"
+     <A HREF="F18/322F18.HTM" style="text-decoration: none"
      ><b><font color="#CC9900">*</font></b></A><br>
 	 
      EGR 323&nbsp; Electronics II (with a lab)
-     <A HREF="S17/323S17.HTM" style="text-decoration: none"
+     <A HREF="S19/323S19.HTM" style="text-decoration: none"
      ><b><font color="#CC9900">*</font></b></A><br>
 
      EGR 360&nbsp; Introduction to Power System Analysis
@@ -354,7 +362,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 	</div></td>
 	<td style="vertical-align: bottom"><div>
 	    De Boer's <A HREF = "http://www.evalbum.com/2761"
-	    >Electric Car</A>, the "Neon Re-Volt"
+	    >Electric Car</A>, the "Neon Re-Volt"  (Jan. 2009 &ndash; Oct. 2017)
     </div></td>
 </tr>
 
@@ -449,18 +457,18 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 		</a> 
 	</div></td>
 	<td style="vertical-align: bottom"><div>
-	    Dordt College <A HREF = "redirect/Dordt_Engineering.htm"
+	    Dordt university <A HREF = "redirect/Dordt_Engineering.htm"
 	    >Engineering Department</A>.<br><br>
     </div></td>
 </tr>
-<!--Dordt College-->
+<!--Dordt university-->
 <TR><td width="130" style="vertical-align: top"><div>
         <A HREF = "http://www.dordt.edu/">
         <br><img src="INDEX/Dordt_Thumbnail.png" width="125" height="66" border="0">
 		</a> 
 	</div></td>
 	<td style="vertical-align: bottom"><div>
-	    Dordt College <A HREF = "http://www.dordt.edu/"
+	    Dordt university <A HREF = "http://www.dordt.edu/"
 	    >Homepage</A>.<br><br>
     </div></td>
 </tr></td></table>
@@ -468,7 +476,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 
 <br><br><br>
 <HR width = 20% align = "left">
-<small>This page last edited on 8/29/2018.</small><BR><br><br>&nbsp;
+<small>This page last edited on 8/22/2019.</small><BR><br><br>&nbsp;
  
 
 </DIV></TD></TR></TABLE>
