Published index page for F19

--- a/F19/204/Quartus.htm
+++ b/F19/204/Quartus.htm
@@ -34,7 +34,7 @@ TABLE {
                                                              <BR>
          INTRODUCTION TO MICROPROCESSORS AND                 <BR>
              DIGITAL CIRCUITS, EGR 204                       <BR>
-                  (Spring 2019)                          </B></P>
+                  (Fall 2019)                          </B></P>
                                                </td></tr></table>
                     <table align="center" width="420" border="0">
                                                              <tr>
