--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -39,9 +39,7 @@
 <TABLE BORDER="0" CELLSPACING="0" CELLPADDING="0" WIDTH="620">
 <TR VALIGN="TOP" width="455">
     <TD>
-        <P style="text-align: center;"><B><A target="_top"
-        HREF="https://dfdeboer.github.io/redirect/Dordt_Engineering.htm">
-        Dordt University Engineering Department</A><br>
+        <P style="text-align: center;"><B>
         Past courses instructed by Professor De Boer</b><br>
 		Click a link to access information for a particular semester.<br><br><small>
 		
@@ -65,6 +63,10 @@
 		(To get back to this page from one of the links below, use your 
 		browser's back-arrow.)</small></p><p>
 		 
+		<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+		<p align="center"><b>Engineering courses that Professor 
+		De Boer has taught at Dordt University</b></p><p>
+		
 		EGR 104, Introduction to Engineering Design<br>
 		<a href="S10/104S10.HTM">S10</a>, 
 		<a href="S09/104S09.HTM">S09</a>, 
