--- a/index_F19.html
+++ b/index_F19.html
@@ -115,7 +115,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 	 up an appointment for a face-to-face meeting at a time that is mutually 
 	 convenient.  I set up appointments outside of office hours frequently.<br><br>
 	 
-     Students have permission to telephone me at home or office between <br>
+     Students have permission to telephone me at home or my office between <br>
 	 8 AM and 10 PM any day except Sunday. (Sunday is OK too if if the call is 
 	 not about course work.)  My office  phone number is 712-722-6245.  
 	 My home phone number is      712-<IMG SRC=home_ph.gif ALIGN="ABSBOTTOM">.<br><br>
@@ -213,43 +213,12 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      ><b><font color="#CC9900">*</font></b></A><br>
 
 </blockquote>
-<!-- <p>A complete schedule of courses DDB has taught (from F1990 to S2003 as of this writing):
------------At Dordt F84 through S91 (w/ Master's degree)----------------
-EGR 306, Analog Circuit Design (Fall 1990)
-EGR 362, Control Systems (Spring 1991, Fall 1994, Fall 1995, This course now renamed.)
-EGR 365, Digital Circuit Design (Spring 1991, This course number now reused for a different course.)
------------At UCCS, F91 through S94 (below)------------------------------
-EGR 221R, Linear Circuits Recitation (Spring 1994 at UCCS)
-EGR 240, Computer Organization (Fall 1991, at UCCS)
-EGR 242, Logic Circuits Laboratory (Fall 1991, at UCCS)
-EGR 244, Microcomputer Systems laboratory I (Fall 1991, at UCCS)
-EGR 321, Electronics I (Fall 1992 at UCCS)
-EGR 322, Electronics II (Spring 1993 at UCCS)
-EGR 351, Linear Systems (Summer, 1992, at UCCS)
-EGR 462, Communication Systems I (Fall 1992, Fall 1993 at UCCS)
-EGR 463/563, Communication systems II (Spring 1993 at UCCS)
---------At Dordt, after leave for Ph.D., F94 and following (below)----------------------
-EGR 105, Engineering Principles (S97, team-taught, DDB did the electrical section, about 1/3 of the course)
-EGR 202, Materials Science (S96)
-EGR 204, Introduction to Microprocessors and Digital Circuits (S96, S97, S98, S99, F99, F00, F01, F02)
-EGR 205, Linear Circuit Analysis (S95 at Dordt, this course is now numbered EGR 220)
-EGR 206, Electronics I (S95, F97, F98, at Dordt, this course is now numbered EGR 321)
-EGR 220, Linear Circuits and Electronics (F99, F00, S02, S03, formerly EGR 205, Linear Circuits)
-EGR 221, Linear Systems Analysis (S00, S01, F02)
-EGR 304, Microprocessor Interfacing (S97, F98, F99, S01, S02, S03, this courses now renamed "Embedded Microcontroller Systems")
-EGR 305, Electronics II (F94 at Dordt, this course is now numbered EGR 322)
-EGR 360, Introduction to Power System Analysis (S96, S97, S98, S99, S00)
-EGR 362, Control Systems (F97, S01, S02, S03)
-EGR 363, Introduction to Communication Systems (F98)
-EGR 365, Digital Circuit Design (S95, S97, S98, S99)
-EGR 366, Digital Signal Processing (S00)
-EGR 380, Senior Design Project (S96) -->
 
      <Blockquote><small>
      * Links to Prof. De Boer's most recent past web site for the course.<BR>
      From there you can find a link to the course syllabus, <br>
-	 a link to older offerings of the course, and more. <br>A more complete list 
-	 of courses taught in the past by Professor De Boer can be found <a href=
+	 a link to older offerings of the course, and more. <br>A complete list 
+	 of past courses taught by Professor De Boer can be found <a href=
 	 "ddb_courses.html">here</a></small></Blockquote> 
 
 
