--- a/F19/363/363F19_Textbook_Requisitions.htm
+++ b/F19/363/363F19_Textbook_Requisitions.htm
@@ -47,12 +47,13 @@
 <td align="center"><a href=
 "https://www.pearson.com/us/higher-education/program/Proakis-Fundamentals-of-Communication-Systems-2nd-Edition/PGM320787.html?tab=overview"
 ><img src="Proakis_Salehi_Cover_116x163_tumbnail.jpg"></a></td>
-<td>Mano, Kime, &amp; Martin</td>
-<td>Logic & Computer Design Fundamentals, 5th Edition&nbsp; &nbsp;</td>
-<td>978-0-13-376063-7</td>
+<td>Proakis and Salehi</td>
+<td>Findamentals of Communication Systems, <br>2nd Edition</td>
+<td>978-0-13-335485-0</td>
 <td>Pearson</td>
-<td>5</td>
+<td>2</td>
 </tr>
+<tr><td colspan = 7>Note:  This table listed an incorrect title and ISBN number prior to August 23, 2019</td></tr>
 
 </table><br><br>
 
@@ -84,21 +85,40 @@ Plan for open book tests.  Books, calculators, etc. may not be shared during a t
 Open book tests will not be open computer or open smartphone tests.  You will need a hardcopy version of the textbook.<br><br>
 
 <b>INTERNATIONAL EDITION, GLOBAL EDITION <font color='red'>NOT</font> SUPPORTED</b><br>
-"International" editions or "Global" editions of the textbook will not be supported by the instructor.  Often the vender assures that an international edition is interchangeable with the domestic edition.  It has <i>never</i> worked that way in Professor <span style="font-family:Garamond; 
+"International" editions or "Global" editions of the textbook will not be supported 
+by the instructor.  Often the vender assures that an international edition is 
+interchangeable with the domestic edition.  It has <i>never</i> worked that way in 
+Professor <span style="font-family:Garamond; 
 			font-size:120%">d</span><span style="font-family:Garamond; 
 			font-size:80%">DB</span>'s experience.<br><br>
 
 <b>PAPERBACK EDITIONS NOT SUPPORTED</b><br>
-In Professor DDB's experience the paperback editions of this textbook are always an international or global editions.  See above on edtitons "not supported."<br><br>
+In Professor <span style="font-family:Garamond; 
+			font-size:120%">d</span><span style="font-family:Garamond; 
+			font-size:80%">DB</span>'s experience the paperback editions of this textbook are always an 
+international or global editions.  See above on edtitons "not supported."<br><br>
 
 <b>CDs, ACCESS CODES NOT NEEDED</b><br>
-The textbook required for this course does not require access codes to Web pages.  The book does not come with a CD or other disk.<br><br>
+The textbook required for this course does not require access codes to Web pages.  
+The book does not come with a CD or other disk.<br><br>
 
 <b>NCEES-approved CALCULATOR REQUIRED, NOT SHAREABLE</b><br>
-Attempting a test or the final exam without a calculator will compromise your grade. Only NCEES-approved calculators will be allowed.  Routinely using a calculator that you can take with you to the Fundamentals of Engineering Exam will improve your performance on that exam.  In this course a calculator that can handle complex numbers is helpful.  The approved list can be found here: <a href="http://ncees.org/exams/calculator/">http://ncees.org/exams/calculator/</a> Not all calculators on this list can do complex number calculations, but the <a href="https://education.ti.com/en/products/calculators/scientific-calculators/ti-36x-pro">TI-36X-Pro</a> model can and is the choice of most engineering students at Dordt College. (Also in this category of top-level performance are the HP 35s, Casio fx115ES PLUS, and the Casio fx991ES Plus C.)  Calculators may not be shared during tests.  You must provide one for yourself.<br><br>
+Attempting a test or the final exam without a calculator will compromise your grade. 
+Only NCEES-approved calculators will be allowed.  Routinely using a calculator that 
+you can take with you to the Fundamentals of Engineering Exam will improve your 
+performance on that exam.  In this course a calculator that can handle complex 
+numbers is helpful.  The approved list can be found 
+here: <a href="http://ncees.org/exams/calculator/">http://ncees.org/exams/calculator/</a> 
+Not all calculators on this list can do complex number calculations, but the 
+<a href="https://education.ti.com/en/products/calculators/scientific-calculators/ti-36x-pro"
+>TI-36X-Pro</a> model can and is the choice of most engineering students at Dordt College. 
+(Also in this category of top-level performance are the HP 35s, Casio fx115ES PLUS, 
+and the Casio fx991ES Plus C.)  Calculators may not be shared during tests.  You must 
+provide one for yourself.<br><br>
 
 <b>TEXTBOOK WEB SITE</b><br>
-The textbook's publisher has a site to accompany this book. Click above on the cover photo to view the publisher's web site for the book.<br><br>
+The textbook's publisher has a site to accompany this book. Click above on the 
+cover photo to view the publisher's web site for the book.<br><br>
        
 </body>
 </html>
