EGR 363 syllabus published

--- a/F19/363F19.HTM
+++ b/F19/363F19.HTM
@@ -92,7 +92,7 @@ target="_top">
           >standards</A>.<BR>
 </P> 
 
-<P style="text-align: center;"><A HREF= "../F17/363/EGR363Syllabus2017F_363F17SY.PDF" target="_top"
+<P style="text-align: center;"><A HREF= "../F19/363/EGR363-01Syllabus2019F_De_Boer_363F19SY_Intro_to_Communication Systems.pdf" target="_top"
                      >Course Syllabus</A><BR>
   Includes course description, textbook, grade weights, etc.<br>
        <!--(Course Syllabus will be available starting<br>
