Linked WWW EGR363 page to previous courses

--- a/F19/363F19.HTM
+++ b/F19/363F19.HTM
@@ -121,7 +121,7 @@ HREF="https://dordt.instructure.com/courses/2189733"
       Target="_top">Canvas@dordt</A><BR>
 The Canvas@dordt portal provides everything on this page and more.<br>
 
-<a href="../S16/363S16.HTM">
+<a href="../F17/363F17.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
 offering of this course <!-- 
 <a href="../S18/363S18.HTM"> 
