--- a/F17/363F17.HTM
+++ b/F17/363F17.HTM
@@ -122,9 +122,9 @@ The Canvas@dordt portal provides everything on this page and more.<br>
 
 <a href="../S16/363S16.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of this course <!-- 
-<a href="../S18/363S18.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0"></a> --> 
+offering of this course <!-- --> 
+<a href="../F19/363F19.HTM"> 
+<img src="../NEXT.GIF" ALT="MEXT" border="0"></a> <!-- --> 
 <BR>
 </small></P> 
 
