--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -49,7 +49,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 5/29/2019 4:35 pm)
+                                >(Last update 8/26/2019 9:22 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -76,23 +76,6 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
         Problems Assigned        <br><DIV style="font-size: 80%">
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
-<!-- ------------------------------------------ --></TD></TR><TR>   
-   <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
-
-   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
-
-   <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;        
-        
-   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp;<!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P03.PDF"
-        title="Click to see solutions">1/25</a><br> -->
-   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        ALL ASSIGNMENTS SHOWN HERE ARE FAKE!  THIS PLACE-HOLDER 
-		PAGE WILL BE UPDATED BEFORE THE COURSE STARTS.                                                              
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  &nbsp;
@@ -148,7 +131,7 @@ PS                                                           <BR>
  1
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        1/16
+        8/26
 
    <!-- Due -->             </TD><TD align="center" valign="top">
         8/29<BR>
@@ -161,6 +144,30 @@ PS                                                           <BR>
         see<br>
         note<br>
         3
+
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Binary numbers, Arithmetic in binary   <br>&nbsp;
+        Scan Chapter 1.  Read Sections 1-2, 1-3        <BR>&nbsp;
+        Do 1-4, 1-5, 1-6, 1-7*, 1-8, 1-9*              <BR>&nbsp;
+        Note: The answer to 1-5 must be exact.
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 0
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        8/26
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        8/26<BR>
+        8/26
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        <a href=
+        "https://dordt.instructure.com/files/153431548/download?download_frd=1"
+        title="Click to see solutions">8/26</a><br>
+        see<br>
+        note<br>
+        6
 
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Binary numbers, Arithmetic in binary   <br>&nbsp;
@@ -180,7 +187,7 @@ Note 1)
 Homework must be ready for peer grading and discussion in 
 class on the first listed due date.  It must be turned in for a 
 final grade on the second listed due date.  Peer grading will be 
-1/4 (25%) of the homework grade.               
+1/5 (20%) of the homework grade.               
                          <BR><BR><TR><TD width="60" valign="top">
 Note 2)
                                                         </TD><TD>
@@ -214,9 +221,16 @@ Note 5)
                                                         </TD><TD>
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
-this <a 
-href="../../ddb/notes00.htm">note on 
+this <a href="../../ddb/notes00.htm">note on 
 cached pages</a> to solve the problem. 
+
+                         <BR><BR><TR><TD width="60" valign="top">
+Note 6) 
+                                                        </TD><TD>
+Problem Set #0 is an example.  An MS Word document that can be 
+optionally used as a template can be downloaded here:  <a href =
+"https://dordt.instructure.com/files/153431809/download?download_frd=1"
+>204F19PS0_DDB_blank.docx</a>
 
                                                    </P></TD></TR>
 </TABLE>
