Linked today's slides

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -90,12 +90,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 8/26------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
+	  "https://dordt.instructure.com/files/153505647/download?download_frd=1"><!-- -->
 	  8/27<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       8/29<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment-->Sample slide set<!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment-->Intro., Noyce scholars, Web pages, What is info?, Modeling signals, Matlab<!--end comment--><br>
       <!--Thursday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 9/02------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
