Update of EGR 204 for today's class period

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -49,7 +49,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 8/26/2019 9:22 pm)
+                                >(Last update 8/29/2019 10:42 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -96,14 +96,14 @@ PS                                                           <BR>
         Do 2-1*, 2-2*, 2-7*                                                               
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- 
+ 2
  
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        8/29
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;
-        
+        9/03<br>
+        9/05
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
         &nbsp;<!-- <a href=
         "http://courses.dordt.edu/file.php/34/S13/HW/204S13P02.PDF"
@@ -163,7 +163,7 @@ PS                                                           <BR>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         <a href=
-        "https://dordt.instructure.com/files/153431548/download?download_frd=1"
+        "https://dordt.instructure.com/files/153616755/download?download_frd=1"
         title="Click to see solutions">8/26</a><br>
         see<br>
         note<br>
