--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -91,12 +91,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/153459653/download?download_frd=1"><!-- -->
-	  8/27<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      8/29<!-- --</a><!-- --></td>
+	  8/27<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/153615319/download?download_frd=1"><!-- -->
+      8/29<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment-->Intro., Noyce Scholars, Web pages, Why digital?, CPU, Binary numbers<!--end comment--><br>
-      <!--Thursday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Thursday    -->&nbsp;<!--start comment-->Algorithms for number conversions, BCD, ASCII, bitmaps<!--end comment--></td>  
    </TR><!-- Week of 9/02------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
