EGR homework page, fixed bad link to 4th ed errata instead of 5th ed errata

--- a/errata/Mano_Kime/5th/MKM_5_ERR.HTM
+++ b/errata/Mano_Kime/5th/MKM_5_ERR.HTM
@@ -43,6 +43,7 @@ to publish this list of errata.                    </small></p><br>
 
 <!-- No errata have been logged for this edition to date.  (No work has
 been done to find errata as of yet.)-->
+                                   <br><br><A NAME="P_34"></A><b>
 Page 34, Problem 1-10.</b><br>
    The answers given online at the publisher's web site have 
    errors of precision.   Correct answers are:<br>
