Added explanation for errata on Page 34, Mano, Kime, Martin 5th ed.

--- a/errata/Mano_Kime/5th/MKM_5_ERR.HTM
+++ b/errata/Mano_Kime/5th/MKM_5_ERR.HTM
@@ -13,7 +13,7 @@ A:visited {color: #CC9900; font-weight:bold;
 <p align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                   (last update 6/10/2019)<br>
+                   (last update 8/29/2019)<br>
                                <br>
    <img src="ManoKimeMartin5Cover100x132_0133760634.png" width="100" height="132"><br>
   Mano, Kime, and Martin, <I>Logic and Computer Design Fundamentals</I>,<br>
@@ -39,7 +39,7 @@ to publish this list of errata.                    </small></p><br>
 <A HREF="http://www.writphotec.com/mano4/text_errata.html"
              >publisher's errata list</A>.<br> -->
 			 
-<b>List of Errata:</b><br><br><b>
+<b>List of Errata:</b><br><br>
 
 <!-- No errata have been logged for this edition to date.  (No work has
 been done to find errata as of yet.)-->
@@ -50,13 +50,27 @@ Page 34, Problem 1-10.</b><br>
    a.)  16612<b><font size=+1>.</font></b>346<sub>&nbsp;8</sub><br>
    b.)  792<b><font size=+1>.</font></b>41D<sub>16</sub>&nbsp;<br>
    c.)  1010 1111<b><font size=+1>.</font></b>0010 1100 11<sub>2</sub>
+   <blockquote>In part (a) the original number, 7562.45 base ten, 
+   has significance down to the 1/100’s place.  It would be 
+   desirable to convert the number maintaining at least that 
+   much accuracy, but not signifying much more.  In octal one can 
+   round to the 1/8’s place, 1/64’s place, 1/512 place, 1/4096 
+   place etc.  Rounding to the 1/512’s place seems an appropriate 
+   choice compared to the original 1/100’s place accuracy.  That 
+   will preserve all the given significant digits and not signify 
+   too much additional precision.  Since 512 = 8<sup>3</sup> this means I 
+   should round to three digits to the right of the radix point.  
+   The textbook’s answer rounds to the nearest 1/4096’s place.  
+   The original number does not have that much place 
+   significance.  Thus 16612.346 octal is a more reasonable answer.
+   <br><br>The rationale for parts (b) and (c) is the same, 
+   only the bases are changed.  
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   <small><i>(Posted 6/10/2019)</i></small>
+   <small><i>(Posted 6/10/2019, updated 8/29/2019)</i></small></blockquote>
    
-                                   <br><br><A NAME="P_35"></A><b>
+                                         <A NAME="P_35"></A><b>
 Page 35, Problem 1-17</b><br>
    Change "1480" to "1460"<br>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
