--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -96,16 +96,16 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       8/29<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment-->Intro., Noyce scholars, Web pages, What is info?, Modeling signals, Matlab<!--end comment--><br>
-      <!--Thursday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Thursday    -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Conflict with "Taste of Sioux Center"</font><!--end comment--></td>  
    </TR><!-- Week of 9/02------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  9/03<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/153950184/download?download_frd=1"><!-- -->
+	  9/03<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       9/05<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Signals: odd, even, hermitian, complex, common signals, power and energy<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 9/09------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
