--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/03/2019 10:20 am)
+                                >(Last update 9/04/2019 5:13 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -193,9 +193,9 @@ PS                                                           <BR>
         9/03
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        <!--<a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P01.PDF"
-        title="Click to see solutions">1/23</a><br>-->
+        <a href=
+        "https://dordt.instructure.com/files/153995260/download?download_frd=1"
+        title="Click to see solutions">9/05</a><br>
         see<br>
         note<br>
         3
